fix underline, startepack spacing

--- a/src/styles/mainSection/cowCone.module.scss
+++ b/src/styles/mainSection/cowCone.module.scss
@@ -7,6 +7,7 @@
   height: auto;
   z-index: 1;
   margin-right: -35px;
+  margin-top: 10px;
   animation: slideIn 1.5s forwards;
   
   // cow hand
